--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ padding: 0rem 1rem;
     padding: 1.5rem 1rem;
     /* border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem; */
-    margin: 7px 0px 0px;
+    margin: 7px auto 0px; 
     padding-bottom: 10px;
     
 }
