--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 hr {
-  margin: 2rem 0rem;
+  margin: 1rem auto;
 }
 
 /* conatiners */
@@ -67,6 +67,7 @@ padding: 0rem 1rem;
     background-color: var(--primary-color);
     color: white;
     padding-top: 1rem;
+    
   
     /* border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem; */
@@ -93,7 +94,7 @@ padding: 0rem 1rem;
 
 .list-inline {
    display: inline;
-   padding: 0rem 1rem;
+   padding: auto 1rem;
 }
 
 /* Header */
