--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 body {
-    font-family: 'Montserrat', 
-    sans-serif;
+    font-family: 'Montserrat',
+        sans-serif;
     margin: 0px;
 }
+
 :root {
-     --primary-color: #60A5FA;
-     --dark-grey:#6B7280;
-     --off-white:#E7E5E4;
-     --off-white1:#F5F5F4;
+    --primary-color: #60A5FA;
+    --dark-grey: #6B7280;
+    --off-white: #E7E5E4;
+    --off-white1: #F5F5F4;
 
 
 }
 
 hr {
-  margin: 1rem auto;
+    margin: 1rem auto;
 }
 
 /* conatiners */
 .container {
-padding: 0rem 1rem;
-}
-/*  shifting div to center */
-.container-center {
-   max-width: 600px;
-   margin: auto;
+    padding: 0rem 1rem;
 }
 
-.brandname{
+/*  shifting div to center */
+.container-center {
+    max-width: 600px;
+    margin: auto;
+}
+
+.brandname {
 
     font-size: 25px;
     padding: 0.8rem 0px 0px 30px;
@@ -35,29 +38,31 @@ padding: 0rem 1rem;
 }
 
 /* links */
-.link{
-    padding:0.5rem 1rem ;
+.link {
+    padding: 0.5rem 1rem;
     text-decoration: none;
     margin-bottom: 2rem;
-    
+
 
 }
+
 .link-primary {
     border-radius: 0.5rem;
     color: white;
     background-color: var(--primary-color);
-    margin: 1rem 1rem 1rem 0rem;
-    max-width: fit-content;
-   display: block;
+    margin: auto;
+    /* max-width: fit-content; */
+    display: inline-block;
 }
+
 .link-secondary {
     border-radius: 0.5rem;
-   
+
     color: var(--primary-color);
     border: 1px solid var(--primary-color);
     margin: 1rem 1rem 1rem 0rem;
-   max-width: 120px;
-   display: block;
+    max-width: 120px;
+    display: block;
 }
 
 
@@ -67,34 +72,38 @@ padding: 0rem 1rem;
     background-color: var(--primary-color);
     color: white;
     padding-top: 1rem;
-    
-  
+
+
     /* border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem; */
 }
+
 .navigation .link {
     color: white;
 }
-.navigation .navpills{
+
+.navigation .navpills {
     text-align: right;
 }
-.navigation .brandname{
+
+.navigation .brandname {
     font-weight: bold;
 }
-.navigation .link-active{
+
+.navigation .link-active {
     font-weight: bold;
 }
 
 /* lists */
-.list-non-bullet{
+.list-non-bullet {
     list-style: none;
     margin: 0px;
     font-size: 20px;
 }
 
 .list-inline {
-   display: inline;
-   padding: auto 1rem;
+    display: inline;
+    padding: auto 1rem;
 }
 
 /* Header */
@@ -102,55 +111,60 @@ padding: 0rem 1rem;
     padding: 2rem;
     text-align: center;
 }
+
 .hero .hero-img {
     max-width: 350px;
-     margin: auto;
-     display: block;
+    margin: auto;
+    display: block;
 }
-.hero .hero-header{
+
+.hero .hero-header {
     padding: 1rem;
     color: var(--dark-grey);
 }
-.hero .hero-inverted{
+
+.hero .hero-inverted {
     color: var(--primary-color);
 }
+
 .hero .hero-img-blog {
     max-width: 150px;
-     margin: auto;
-     display: block;
+    margin: auto;
+    display: block;
 }
 
 
 
 /* Section */
-.section{
+.section {
     padding: 2rem;
     max-width: 700px;
-    margin:10px auto;
+    margin: 10px auto;
     border-radius: 20px;
     background-color: #e5e5e5
-    
 }
 
-.section h1{
+.section h1 {
     text-align: center;
 }
 
 /* Footer */
-.footer{
+.footer {
     background-color: #60A5FA;
     text-align: center;
     color: white;
     padding: 1.5rem 1rem;
     /* border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem; */
-    margin: 7px auto 0px; 
+    margin: 7px auto 0px;
     padding-bottom: 10px;
-    
+
 }
-.footer .link{
-    color:white;
+
+.footer .link {
+    color: white;
 }
+
 /* 
 .foot-icon{
     color: #ffb3c1;
@@ -160,20 +174,3 @@ padding: 0rem 1rem;
 /* .footer .copyright{
     border-bot: 0px;
 } */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
