--- a/styles.css
+++ b/styles.css
@@ -153,10 +153,10 @@ hr {
     background-color: #60A5FA;
     text-align: center;
     color: white;
-    padding: 1.5rem 1rem;
+    padding: 3rem 2rem 4rem;
     /* border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem; */
-    margin: 7px auto 0px;
+    margin: 1rem auto 0rem;
     padding-bottom: 10px;
 
 }
@@ -174,3 +174,7 @@ hr {
 /* .footer .copyright{
     border-bot: 0px;
 } */
+
+.copyright{
+    margin: 1rem auto;
+}
