--- a/styles.css
+++ b/styles.css
@@ -178,3 +178,27 @@ hr {
 .copyright{
     margin: 1rem auto;
 }
+
+.blog-heading{
+    text-align: center;
+    margin: 2rem auto;
+}
+.blog-div{
+    margin: 2rem auto;
+    max-width: 700px;
+}
+.blog-div h4{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin: auto;
+    font-size: large;
+}
+.blog-div h6{
+    margin :0.5rem auto;
+    font-size: small;
+}
+.blog-article{
+    max-width: 650px;
+    
+    margin: auto;
+}
